# atari-msc

./: .gitignore  CMakeLists.txt  README.md
atari/: CMakeLists.txt  Resource.rc  atariSettings  config  imgui  imgui.ini  resource.h
atari/dependencies/: CMakeLists.txt
atari/doc/: bledy_main.css  bledy_main.html  bledy_programu.css  bledy_programu.html  index.html  polecenia_main.html  polecenie.css  style.css
atari/src/: main.cpp  pch.h
atari/src/App/: App.cpp  App.hpp  Run.cpp
atari/src/App/Logger/: ErrorLog.cpp  ErrorLog.hpp
atari/src/Atari/: Atari.cpp  Atari.hpp
atari/src/Atari/Canvas/: Canvas.cpp  Canvas.hpp
atari/src/Atari/Interpreter/: CodeStructures.hpp  Errors.hpp  Interpreter.cpp  Interpreter.hpp  Interpreting.cpp  Parser.cpp  Validation.cpp
atari/src/Atari/Turtle/: Turtle.cpp  Turtle.hpp
atari/src/Input/: Input.cpp  Input.hpp
atari/src/Utils/: HeapMonitoring.hpp  ImGuiUtils.hpp  PerformanceMonitoring.hpp  Utils.hpp
atari/src/imgui/: imgui.h  imgui_draw.cpp  imgui_tables.cpp
atari/src/tlang/: TeaLang.hpp  Variable.cpp  dataStructure.cpp  tCode.cpp  tCodeInterpreter.cpp
textEditor/: imgui.ini
textEditor/src/: main.cpp
textEditor/src/App/: App.hpp  Run.cpp
textEditor/src/Atari/: Atari.hpp
textEditor/src/Atari/Canvas/: Canvas.cpp
textEditor/src/Atari/Interpreter/: Interpreter.hpp
textEditor/src/Atari/Turtle/: Turtle.hpp
textEditor/src/Input/: Input.cpp  Input.hpp
textEditor/src/Utils/: Utils.hpp
textEditor/src/tlang/: tCode.cpp
